--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,19 +8,19 @@
 <br />
 
 <h3>Name:</h3>
-
 <p><%= @profile.full_name || 'n/a' %></p>
 
+<% if @profile.show_email or can? :destroy, @profile %>
 <h3>Email:</h3>
+	<p><%= @profile.user.email %></p>
+<% end %>
 
-<p><%= @profile.user.email %></p>
-
-<h3>Phone Number:</h3>
-
-<p><%= @profile.phone || 'n/a'%></p>
-
+<% if @profile.show_phone or can? :destroy, @profile %>
+	<h3>Phone Number:</h3>
+	<p><%= @profile.phone || 'n/a' %></p>
+<% end %>
 <br />
 
-<% if @profile.user == current_user or current_user.is_admin?%>
+<% if @profile.user == current_user or current_user.is_admin? %>
 	<%= link_to "Edit Profile", edit_profile_path, class: "btn btn-lg btn-primary" %>
 <% end %>
